--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-core": "^6.9.1",
     "babel-jest": "^12.1.0",
     "babel-preset-react-native": "^1.9.0",
-    "babel-preset-react-native-stage-0": "^1.0.1"
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "react-native-code-push": "^1.12.2-beta"
   }
 }
